K8S/nanhiduniyaauth-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: nanhiduniyaauthnpservice-srv
spec:
  type: NodePort
  selector:
    app: nanhiduniyaservice
  ports:
    - name: nanhiduniyaservice
      protocol: TCP
      port: 8080
      targetPort: 8080
