K8S/nanhiduniyafrontend-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: nanhiduniyafrontendnpservice-srv  # Service name
spec:
  type: NodePort  # This allows external access to the service
  selector:
    app: nanhiduniyafrontend  # This should match the labels of your deployment
  ports:
    - name: nanhiduniyafrontend  # Port name for reference
      protocol: TCP  # Protocol used
      port: 3000  # The port exposed by the service
      targetPort: 3000  # The port your application is running on inside the container
