K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nanhiduniyaauthapi.saurabhmishra.com
        - nanhiduniyafrontend.saurabhmishra.com
      secretName: nanhiduniya-tls  # Name of the secret that will store the TLS certificates
  rules:
    - host: nanhiduniyaauthapi.saurabhmishra.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: nanhiduniyaauth-clusterip-srv
                port:
                  number: 8080
    - host: nanhiduniyafrontend.saurabhmishra.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: nanhiduniyafrontend-clusterip-srv
                port:
                  number: 3000
